Add implementation for InsertExchangeRate  endpoint
